--- a/views/students/index.ejs
+++ b/views/students/index.ejs
@@ -1,8 +1,9 @@
 <% include ../partials/header.ejs %>
   <% students.forEach(students => { %>
     <h2><%= students.fname %> <%= students.lname %></h2>
+      <a href = "/houses/<%=students.house_id %>"><%= students.house_id %></a>
     <a href = "/students/<%=students.student_id %>"><img src="<%= students.image %>"></a>
-   <p><%= students.house_id %> </p>
+  
   <% }); %>
 
 <% include ../partials/footer.ejs %>
