--- a/views/students/index.ejs
+++ b/views/students/index.ejs
@@ -1,4 +1,5 @@
 <% include ../partials/header.ejs %>
+<a href = "students/new">Add a student</a>
   <% students.forEach(students => { %>
     <h2><%= students.fname %> <%= students.lname %></h2>
       <a href = "/houses/<%=students.house_id %>"><%= students.house_id %></a>
