successfully added new student

--- a/views/students/new.ejs
+++ b/views/students/new.ejs
@@ -7,7 +7,7 @@
     <label>Last Name</label>
     <input name="lname" type="text" />
     <label>Image</label>
-    <input name - "image" type="text"/>
+    <input name = "image" type="text"/>
     <label>House</label>
     <select name = "house_id">
       <option value="1">Gryffindor</option>
@@ -15,5 +15,6 @@
       <option value="3">Ravenclaw</option>
       <option value="4">Slytherin</option>
     </select>
+    <button type = "submit">submit</button>
   </form>
   <% include ../partials/header.ejs %>
