--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,8 +1,23 @@
-<% include ../partials/header.ejs %>
+<!doctype html>
+<html>
 
+<head>
+  <% include ../partials/header %>
+</head>
+
+<body>
+  <h1 class = "index-header">Welcome to Hogwarts</h1>
+<div class="index-page-container">
 <a href="/houses">Houses</a>
 
 <a href="/students">Students</a>
 
+</div>
 
-<% include ../partials/footer.ejs %>
+</body>
+
+<footer>
+  <% include ../partials/footer %>
+</footer>
+
+</html>
