--- a/views/students/new.ejs
+++ b/views/students/new.ejs
@@ -1,4 +1,10 @@
-<% include ../partials/header.ejs %>
+<!doctype html>
+<html>
+
+<head>
+  <% include ../partials/header %>
+</head>
+
   <h2> Add a student </h2>
 
   <form class="new-student" method = "POST">
@@ -17,4 +23,10 @@
     </select>
     <button type = "submit">submit</button>
   </form>
-  <% include ../partials/header.ejs %>
+
+  </body>
+  <footer>
+    <% include ../partials/footer %>
+  </footer>
+  
+  </html>
