--- a/views/students/show.ejs
+++ b/views/students/show.ejs
@@ -1,8 +1,22 @@
-<% include ../partials/header.ejs %>
+<!doctype html>
+<html>
+
+<head>
+  <% include ../partials/header %>
+</head>
+
+<body>
+
   <h2><%= student.fname %> <%= student.lname %></h2>
     <p><img src="<%= student.image %>"></p>
 
     <form method="POST" action="/students/<%= student.student_id %>?_method=DELETE" class="delete-form">
       <button type="submit" class="delete-button">Delete</button>
     </form>
-<% include ../partials/header.ejs %>
+
+    </body>
+    <footer>
+      <% include ../partials/footer %>
+    </footer>
+    
+    </html>
